--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    
+
+    //network
+    implementation "com.squareup.okhttp3:okhttp:4.7.2"
+    implementation 'org.conscrypt:conscrypt-android:2.2.1'
+
+    /*rx*/
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+
+    /*cicerone*/
+    implementation 'ru.terrakok.cicerone:cicerone:5.1.0'
 }
