--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
@@ -40,12 +44,14 @@ dependencies {
     //leakcanary
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.3'
 
-    //Android X
+    //AndroidX
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "com.google.android.material:material:1.3.0-alpha01"
+
+    implementation 'com.github.liverm0r:delegateadapters:3.00'
 
     //Image
     implementation 'com.makeramen:roundedimageview:2.3.0'
@@ -57,6 +63,7 @@ dependencies {
 
     /*rx*/
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    implementation "com.jakewharton.rxrelay2:rxrelay:2.1.1"
 
     /*cicerone*/
     implementation 'ru.terrakok.cicerone:cicerone:5.1.0'
