--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,11 +61,14 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:4.7.2"
     implementation 'org.conscrypt:conscrypt-android:2.2.1'
 
-    /*rx*/
+    //rx
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     implementation "com.jakewharton.rxrelay2:rxrelay:2.1.1"
 
-    /*cicerone*/
+    //SingleLiveEvent (https://github.com/hadilq/LiveEvent)
+    implementation "com.github.hadilq.liveevent:liveevent:1.2.0"
+
+    //cicerone
     implementation 'ru.terrakok.cicerone:cicerone:5.1.0'
 
     def dagger_version = "2.27"
