Feature(Live): Сделал прямую трансляцию
-Создал модельку stream, которая хранит титульник, картинку и url на видео поток
-Сделал получение модельки stream с сервера vesti.ru
-Сделал вместо LiveFragment, LiveActivity, чтобы не запариваться с обработкой поворота
-Сделал кастомную view для отображения видео

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="abdulmanov.eduard.news">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".presentation.App"
@@ -12,6 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <activity
+            android:name=".presentation.live.LiveActivity"
+            android:configChanges="orientation|screenSize">
+
+        </activity>
+
         <activity android:name=".presentation.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
