--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,21 +49,26 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.3'
 
     //AndroidX
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "com.google.android.material:material:1.3.0-alpha01"
+    implementation "com.google.android.material:material:1.3.0-alpha02"
 
+    //UI
     implementation 'com.github.liverm0r:delegateadapters:3.00'
-
-    //Image
+    implementation 'com.nex3z:flow-layout:1.3.1'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //network
-    implementation "com.squareup.okhttp3:okhttp:4.7.2"
-    implementation 'org.conscrypt:conscrypt-android:2.2.1'
+    implementation "com.squareup.retrofit2:retrofit:2.7.1"
+    implementation "com.squareup.retrofit2:converter-gson:2.7.1"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.7.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.4.0"
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     //rx
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
