--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "com.google.android.material:material:1.3.0-alpha02"
+    implementation "com.google.android.material:material:1.2.0"
 
     //UI
     implementation 'com.github.liverm0r:delegateadapters:3.00'
