Feature(LiveStream): Сделал прямую трансляцию
-Создал LiveStreamActivity для отоборжанеия прямой трансляции
-Создал ChangeTvChannelsBottomSheet для смены телеканала
-Создал CustomVideoView, который инкапсулирует работу с VideoView
-Создал VideoActivity, который инкапсулирует работу со статус баром и навигационным баром
-Создал DisappearingConstraintLayout, который управляет исчезновением ViewGroup после нажатия

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-8704070863677065~7203258551"/>
+            android:value="ca-app-pub-8704070863677065~7203258551" />
 
         <activity
             android:name=".presentation.main.MainActivity"
@@ -28,6 +28,9 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".presentation.livestream.LiveStreamActivity"
+            android:configChanges="orientation|screenSize"/>
     </application>
 
 </manifest>
