--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-rc1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
 
     //UI
     implementation "com.google.android.material:material:1.2.0"
@@ -80,7 +81,10 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //network
-    implementation "com.squareup.retrofit2:retrofit:2.7.1"
+    def retrofit2_version = "2.7.1"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit2_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit2_version"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
     //Gson
