--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
 android {
@@ -21,12 +20,10 @@ android {
 
     buildTypes {
         release {
-            resValue 'string', 'adUnitId', '"ca-app-pub-8704070863677065/2880870163"'
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-            resValue 'string', 'adUnitId', '"ca-app-pub-3940256099942544/6300978111"'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -64,7 +61,6 @@ dependencies {
     //Firebase
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
-    implementation 'com.google.android.gms:play-services-ads:19.3.0'
 
     //AndroidX
     implementation 'androidx.core:core-ktx:1.3.1'
@@ -81,10 +77,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //network
-    def retrofit2_version = "2.7.1"
-    implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit2_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit2_version"
+    implementation "com.squareup.okhttp3:okhttp:4.8.1"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
     //Gson
